/*
 * Copyright 2022, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.event;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.event";
option java_outer_classname = "EventEventsProto";
option java_multiple_files = true;

import "spine/core/user_id.proto";
import "spine/net/email_address.proto";
import "spine/test/event/project.proto";
import "spine/test/event/team.proto";

message ProjectCreated {
    ProjectId project_id = 1;
    EvTeamId team_id = 2;
}

message TaskAdded {
    ProjectId project_id = 1;
    Task task = 2;
}

message ProjectStarted {
    ProjectId project_id = 1;
}

message ProjectCompleted {
    ProjectId project_id = 1;
}

message ProjectStarred {
    ProjectId project_id = 1;
}

message EvTeamProjectAdded {
    EvTeamId team_id = 1;
    ProjectId project_id = 2;
}

message EvTeamCreated {
    EvTeamId team_id = 1;
    repeated EvMember member = 2;
}

message EvTeamMemberAdded {
    EvTeamId team_id = 1;
    EvMember member = 2;
}

message EvTeamMemberInvited {
    EvTeamId team_id = 1;
    spine.net.EmailAddress email = 2;
}

message EvInvitationAccepted {
    spine.core.UserId user_id = 1;
    EvMemberInvitation invitation = 2;
}

message EBProjectCreated {
    ProjectId project_id = 1;
}

message EBProjectArchived {
    ProjectId project_id = 1;
    string reason = 2 [(required) = true];
}

message EBTaskAdded {
    ProjectId project_id = 1;
    Task task = 2 [(required) = true];
}

message ProjectFinished {
    ProjectId project_id = 1;
}
